--- a/config/sync/language/es/views.view.watchdog.yml
+++ b/config/sync/language/es/views.view.watchdog.yml
@@ -20,6 +20,7 @@ display:
         type:
           label: Tipo
         name:
+          label: Usuario
           separator: ', '
         link:
           label: Operaciones
