--- a/config/sync/language/ar/views.view.files.yml
+++ b/config/sync/language/ar/views.view.files.yml
@@ -25,6 +25,9 @@ display:
         options:
           expose:
             items_per_page_options_all_label: '- الكل -'
+      fields:
+        entity_label:
+          label: الكيان
       arguments:
         fid:
           exception:
