--- a/config/sync/language/es/views.view.content.yml
+++ b/config/sync/language/es/views.view.content.yml
@@ -1,3 +1,4 @@
+label: Contenido
 display:
   default:
     display_options:
@@ -43,6 +44,12 @@ display:
                 title: Publicado
               2:
                 title: 'Sin publicar'
+      title: Contenido
     display_title: Máster
   page_1:
+    display_options:
+      menu:
+        title: Contenido
+      tab_options:
+        title: Contenido
     display_title: Página
