--- a/config/sync/language/es/views.view.who_s_new.yml
+++ b/config/sync/language/es/views.view.who_s_new.yml
@@ -9,3 +9,6 @@ display:
           exposed_sorts_label: 'Ordenar por'
           sort_asc_label: Asc
           sort_desc_label: Desc
+  block_1:
+    display_options:
+      block_category: Usuario
