--- a/config/sync/language/fr/views.view.file_entity_files.yml
+++ b/config/sync/language/fr/views.view.file_entity_files.yml
@@ -40,6 +40,9 @@ display:
             items_per_page_label: 'Éléments par page'
             items_per_page_options_all_label: '- Tout -'
             offset_label: Décalage
+      fields:
+        entity_label:
+          label: Entité
       arguments:
         fid:
           exception:
