--- a/config/sync/language/fr/views.view.files.yml
+++ b/config/sync/language/fr/views.view.files.yml
@@ -38,6 +38,8 @@ display:
             items_per_page_options_all_label: '- Tout -'
             offset_label: Décalage
       fields:
+        entity_label:
+          label: Entité
         count:
           format_plural_string: !!binary MQNAY291bnQ=
       arguments:
