--- a/config/sync/language/fr/views.view.watchdog.yml
+++ b/config/sync/language/fr/views.view.watchdog.yml
@@ -20,6 +20,7 @@ display:
         type:
           label: Type
         name:
+          label: Utilisateur
           separator: ', '
         link:
           label: Actions
