Update of multiple views, for display and layout of news, events, publications. Add similarterms for related news. Solr config also included.

--- a/config/sync/language/ar/views.view.media.yml
+++ b/config/sync/language/ar/views.view.media.yml
@@ -14,6 +14,8 @@ display:
           expose:
             items_per_page_options_all_label: '- الكل -'
       fields:
+        thumbnail__target_id:
+          label: 'النسخة المصغرة'
         bundle:
           label: النوع
         status:
