--- a/config/sync/language/fr/views.view.media_library.yml
+++ b/config/sync/language/fr/views.view.media_library.yml
@@ -37,6 +37,9 @@ display:
             title: Tout
   widget_table:
     display_options:
+      fields:
+        thumbnail__target_id:
+          label: Vignette
       arguments:
         bundle:
           exception:
