--- a/config/sync/language/es/views.view.media.yml
+++ b/config/sync/language/es/views.view.media.yml
@@ -22,6 +22,7 @@ display:
             last: 'Último »'
       fields:
         thumbnail__target_id:
+          label: Miniatura
           separator: ', '
         name:
           separator: ', '
