--- a/config/sync/language/fr/views.view.media.yml
+++ b/config/sync/language/fr/views.view.media.yml
@@ -22,6 +22,7 @@ display:
             last: 'Dernier »'
       fields:
         thumbnail__target_id:
+          label: Vignette
           separator: ', '
         name:
           separator: ', '
