--- a/config/sync/language/fr/webform.settings.yml
+++ b/config/sync/language/fr/webform.settings.yml
@@ -1,4 +1,7 @@
 settings:
+  default_form_close_message: 'Sorry…This form is closed to new submissions.'
   default_reset_button_label: Réinitialiser
   default_preview_next_button_label: Aperçu
   default_preview_label: Aperçu
+element:
+  default_more_title: More
