Add the latest config changes for Issue tracker

--- a/config/sync/language/ar/eu_cookie_compliance.settings.yml
+++ b/config/sync/language/ar/eu_cookie_compliance.settings.yml
@@ -1,1 +1,5 @@
+popup_disagree_button_message: 'More info'
+popup_find_more_button_message: 'More info'
 popup_hide_button_message: إخفاء
+popup_link: /node/9571
+disagree_button_label: 'No thank you'
