--- a/config/sync/language/fr/views.view.comment.yml
+++ b/config/sync/language/fr/views.view.comment.yml
@@ -30,8 +30,16 @@ display:
           label: Actions
         name_1:
           separator: ', '
+      filters:
+        langcode:
+          expose:
+            label: Language
   page_unapproved:
     display_options:
+      filters:
+        langcode:
+          expose:
+            label: Language
       fields:
         subject:
           separator: ', '
