--- a/config/sync/language/fr/views.view.media.yml
+++ b/config/sync/language/fr/views.view.media.yml
@@ -52,6 +52,9 @@ display:
                 title: Publié
               2:
                 title: 'Non publié'
+        langcode:
+          expose:
+            label: Language
       title: Média
   media_page_list:
     display_title: Média
