Test config ignore for Innovation Tracker

--- a/config/sync/language/fr/block.block.innovationtrackerheader.yml
+++ b/config/sync/language/fr/block.block.innovationtrackerheader.yml
@@ -2,4 +2,4 @@ settings:
   content:
     value: "<p>Le bulletin électronique trimestriel du Centre pour l'innovation au Parlement</p>\r\n"
     format: full_html
-  page_title: 'IPU Suivi de l''innovation'
+  page_title: 'IPU Suivi de l''innovation (FR)'
